Mega Menu spacing fix

--- a/src/layout/header/header.scss
+++ b/src/layout/header/header.scss
@@ -373,6 +373,9 @@ header {
         }
         display: block;
         @include xl() {
+          max-height: 65vh;
+        }
+        @include xxl() {
           max-height: 70vh;
         }
       }
